--- a/.github/workflows/docker-push.yml
+++ b/.github/workflows/docker-push.yml
@@ -14,11 +14,9 @@ jobs:
       IMAGE_TAG: latest
 
     steps:
-      # Step 1: Checkout code
       - name: Checkout code
         uses: actions/checkout@v3
 
-      # Step 2: SonarCloud Scan
       - name: SonarCloud Scan
         uses: SonarSource/sonarcloud-github-action@master
         with:
@@ -28,40 +26,30 @@ jobs:
           SONAR_PROJECT_KEY: shivali-devops_helloworld-devops-poc
           SONAR_ORGANIZATION: shivali-org
 
-      # Step 3: Set up Docker Buildx
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
 
-      # Step 4: Login to DockerHub
+      # DockerHub Login
       - name: Log in to DockerHub
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      # Step 5: Build and Push Docker Image to DockerHub
-      - name: Build and Push to DockerHub
+      # ECR Login
+      - name: Log in to Amazon ECR
+        uses: docker/login-action@v2
+        with:
+          registry: 664418995582.dkr.ecr.ap-south-1.amazonaws.com
+          username: AWS
+          password: ${{ secrets.AWS_ECR_PASSWORD }}
+
+      # Build and Push to Both DockerHub and ECR
+      - name: Build and push to DockerHub and ECR
         uses: docker/build-push-action@v4
         with:
           context: .
           push: true
-          tags: shivali557/helloworld:latest
-
-      # Step 6: Configure AWS credentials for ECR
-      - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v2
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: ${{ env.AWS_REGION }}
-
-      # Step 7: Login to Amazon ECR
-      - name: Login to Amazon ECR
-        run: |
-          aws ecr get-login-password --region $AWS_REGION | docker login --username AWS --password-stdin 664418995582.dkr.ecr.$AWS_REGION.amazonaws.com
-
-      # Step 8: Tag and Push Image to ECR
-      - name: Tag and Push to Amazon ECR
-        run: |
-          docker tag shivali557/helloworld:latest 664418995582.dkr.ecr.$AWS_REGION.amazonaws.com/$ECR_REPOSITORY:$IMAGE_TAG
-          docker push 664418995582.dkr.ecr.$AWS_REGION.amazonaws.com/$ECR_REPOSITORY:$IMAGE_TAG
+          tags: |
+            shivali557/helloworld:latest
+            664418995582.dkr.ecr.ap-south-1.amazonaws.com/helloworld:latest
