--- a/.github/workflows/docker-push.yml
+++ b/.github/workflows/docker-push.yml
@@ -39,7 +39,7 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      # Step 5: Configure AWS credentials (IMPORTANT ✅)
+      # Step 5: Configure AWS credentials (IMPORTANT)
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v2
         with:
