--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -2,7 +2,6 @@
 
 sonar.projectKey=shivali-devops_helloworld-devops-poc
 sonar.organization=shivali-org
-sonar.projectName=Helloworld DevOps PoC
-sonar.projectVersion=1.0
+sonar.host.url=https://sonarcloud.io
+sonar.python.coverage.reportPaths=results.xml
 sonar.sources=.
-sonar.python.version=3
