--- a/.github/workflows/docker-push.yml
+++ b/.github/workflows/docker-push.yml
@@ -31,7 +31,7 @@ jobs:
           pip install -r requirements.txt
           pytest --junitxml=results.xml
 
-      # Step 4: SonarCloud Scan with test coverage
+      # Step 4: SonarCloud Scan
       - name: SonarCloud Scan
         uses: SonarSource/sonarcloud-github-action@master
         with:
@@ -43,18 +43,32 @@ jobs:
           SONAR_PROJECT_KEY: shivali-devops_helloworld-devops-poc
           SONAR_ORGANIZATION: shivali-org
 
-      # Step 5: Set up Docker Buildx
+      # Step 5: Check SonarCloud Quality Gate
+      - name: Check SonarCloud Quality Gate
+        env:
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+        run: |
+          echo "Waiting for SonarCloud to finish analysis..."
+          sleep 15
+          STATUS=$(curl -s -u $SONAR_TOKEN: "https://sonarcloud.io/api/qualitygates/project_status?projectKey=shivali-devops_helloworld-devops-poc" | jq -r '.projectStatus.status')
+          echo "Quality Gate Status: $STATUS"
+          if [ "$STATUS" != "OK" ]; then
+            echo "Quality Gate failed. Failing the pipeline."
+            exit 1
+          fi
+
+      # Step 6: Set up Docker Buildx
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
 
-      # Step 6: Log in to DockerHub
+      # Step 7: Log in to DockerHub
       - name: Log in to DockerHub
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      # Step 7: Configure AWS credentials
+      # Step 8: Configure AWS credentials
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v2
         with:
@@ -62,13 +76,13 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ env.AWS_REGION }}
 
-      # Step 8: Log in to Amazon ECR
+      # Step 9: Log in to Amazon ECR
       - name: Login to Amazon ECR
         run: |
           aws ecr get-login-password --region $AWS_REGION | \
           docker login --username AWS --password-stdin 664418995582.dkr.ecr.$AWS_REGION.amazonaws.com
 
-      # Step 9: Build and Push Docker Image
+      # Step 10: Build and Push Docker Image
       - name: Build and Push Docker Image
         uses: docker/build-push-action@v4
         with:
