--- a/.github/workflows/docker-push.yml
+++ b/.github/workflows/docker-push.yml
@@ -27,9 +27,10 @@ jobs:
       # Step 3: Install dependencies and run tests
       - name: Install dependencies and run tests
         run: |
-          python -m pip install --upgrade pip
+          pip install --upgrade pip
           pip install -r requirements.txt
-          pytest --junitxml=results.xml
+          pip install pytest pytest-cov
+          pytest --cov=. --cov-report=xml
 
       # Step 4: SonarCloud Scan
       - name: SonarCloud Scan
@@ -37,7 +38,7 @@ jobs:
         with:
           projectBaseDir: .
           args: >
-            -Dsonar.python.coverage.reportPaths=results.xml
+            -Dsonar.python.coverage.reportPaths=coverage.xml
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
           SONAR_PROJECT_KEY: shivali-devops_helloworld-devops-poc
