--- a/.github/workflows/docker-push.yml
+++ b/.github/workflows/docker-push.yml
@@ -89,6 +89,7 @@ jobs:
         with:
           context: .
           push: true
+          no-cache: true
           tags: |
             shivali557/helloworld:latest
             664418995582.dkr.ecr.ap-south-1.amazonaws.com/helloworld:latest
